# sycl-info

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSES.TXT  PKGBUILD  README.md  appveyor.yml  conanfile.py  sycl-info-cpack.cmake
.travis/: install.sh
cmake/: FindLyra.cmake  Findclang-tidy.cmake  Findronn.cmake  OpenCLCompatibleInterface.cmake
cmake/cpack/: DEBOptions.cmake  RPMOptions.cmake  WIXOptions.cmake
config/conan/: remotes.txt
config/conan/profiles/: build-tools  ci-clang  ci-gcc  ci-msvc  warnings-clang  warnings-gcc  warnings-msvc
config/hooks/: clang-format.sh
imp-finder/: CMakeLists.txt  sycl_info_imp_finder.cpp
imp-finder/include/imp_finder/: sycl_info_imp_finder.h
impl-matchers/: CMakeLists.txt  impl-matchers.cpp
impl-matchers/include/impl_matchers/: impl_matchers.h
samples/: example.syclinfo
sycl-info/: CMakeLists.txt  cli_config.hpp  config.hpp.in  impl_finder.cpp  impl_finder.hpp  impl_matchers.cpp  sycl-info-config.cmake  sycl_info.cpp  utility.hpp
sycl-info/doc/: CMakeLists.txt  sycl-info.1.md
sycl-info/test/: CMakeLists.txt
target-selector/: CMakeLists.txt  README.md  target-selector-config.cmake  target_selector.cpp
target-selector/include/: CMakeLists.txt
target-selector/include/target_selector/: CMakeLists.txt  color_scope.h  color_scope.hpp  config.h.in  config.hpp.in  target_selector.h  target_selector.hpp
target-selector/test/: CMakeLists.txt
